Agregue mas cosas al html
Agregue mas cosas a los html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 <!-- header -->
-<div class="header_w3l" data-spy="affix" ><!-- El menu de movera desde un punto inicial data-offset-top="690" -->
+<div class="header_w3l" data-spy="affix">
 	<div class="container">
 		<nav class="navbar navbar-default">
 			<div class="navbar-header">
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a  href="index.html">Dolly<span> Roncancio</span><img class="imagenlogo" src="images/icono7.png" alt="Solvetic"></a></h1>
+			<h1><a  href="index.html">Dolly<span> Roncancio</span><img class="imagenlogo" src="images/icono7.png" alt="Solvetic"></a></h1>
 			</div>
 				<!-- top-nav -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -67,6 +67,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="index.html" class="active"><span class="iconmenu icon-home"></span> Inicio</a></li>
 					<li><a href="about.html"><span class="iconmenu icon-book"></span> Nosotros</a></li>
 					<li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li>
+					<li><a href="main_app/resultados.php"><span class="iconmenu icon-location2"></span> Descargar Resultados</a></li>
 					<li><a href="contact.html"><span class="iconmenu icon-location2"></span> Contacto</a></li>
 					<li><a href="loogin.php"><span class="iconmenu icon-user-tie"></span> Usuario</a></li>
 				</ul>	
@@ -338,7 +339,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 </div>
-<div class="contact_w3agile">
+<!-- <div class="contact_w3agile">
 	<div class="container">
 		<h2 class="title w3">Contactanos</h2>
 		<div class="strip"></div>
@@ -359,7 +360,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</form>
 		<p class="agileinfo"> 2018 Dolly Roncancio . All rights reserved | Design by Jose Luis Mora R, Cristian  </p>
 	</div>
-</div>
+</div> -->
 <!-- smooth scrolling -->
 	<script type="text/javascript">
 		$(document).ready(function() {
