--- a/about.html
+++ b/about.html
@@ -64,6 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="index.html" class="active"><span class="iconmenu icon-home"></span> Inicio</a></li>
 					<li><a href="about.html"><span class="iconmenu icon-book"></span> Nosotros</a></li>
 					<li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li>
+					<li><a href="main_app/resultados.php"><span class="iconmenu icon-location2"></span> Descargar Resultados</a></li>
 					<li><a href="contact.html"><span class="iconmenu icon-location2"></span> Contacto</a></li>
 					<li><a href="loogin.php"><span class="iconmenu icon-user-tie"></span> Usuario</a></li>
 				</ul>	
@@ -234,7 +235,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </div>
 <!-- contact -->
-<div class="contact_w3agile">
+<!-- <div class="contact_w3agile">
 	<div class="container">
 		<h2 class="title">Contactanos</h2>
 		<div class="strip"></div>
@@ -255,7 +256,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</form>
 			<p class="agileinfo"> 2018 Dolly Roncancio . All rights reserved | Design by Jose Luis Mora R, Cristian  </p>
 	</div>
-</div>
+</div> -->
 <!-- smooth scrolling -->
 	<script type="text/javascript">
 		$(document).ready(function() {
