Incluimos varios archivos y modificamos
Se incluyeron varios achivos en el Admin/Edicion y codigo en el main.js, asi como en el main_app

--- a/treatments.html
+++ b/treatments.html
@@ -64,6 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="index.html" class="active"><span class="iconmenu icon-home"></span> Inicio</a></li>
 					<li><a href="about.html"><span class="iconmenu icon-book"></span> Nosotros</a></li>
 					<li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li>
+					<li><a href="main_app/resultados.php"><span class="iconmenu icon-location2"></span> Descargar Resultados</a></li>
 					<li><a href="contact.html"><span class="iconmenu icon-location2"></span> Contacto</a></li>
 					<li><a href="loogin.php"><span class="iconmenu icon-user-tie"></span> Usuario</a></li>
 				</ul>	
@@ -163,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 <!-- //gallery -->
 <!-- contact -->
-<div class="contact_w3agile">
+<!-- <div class="contact_w3agile">
 	<div class="container">
 		<h2 class="title agileinfo">Contactanos</h2>
 		<div class="strip"></div>
@@ -184,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</form>
 		<p class="agileinfo">&copy; 2018 Dolly Roncancio. All rights reserved | Design by Jose Luis Mora R, Cristian Ovalle</p>
 	</div>
-</div>
+</div> -->
 <!-- smooth scrolling -->
 	<script type="text/javascript">
 		$(document).ready(function() {
