--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html" class="active"><span class="iconmenu icon-home"></span> Inicio</a></li>
 					<li><a href="about.html"><span class="iconmenu icon-book"></span> Nosotros</a></li>
-					<li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li>
+					<!-- <li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li> -->
 					<li><a href="main_app/resultados.php"><span class="iconmenu icon-download"></span> Descargar Resultados</a></li>
 					<li><a href="contact.html"><span class="iconmenu icon-location2"></span> Contacto</a></li>
 					<li><a href="loogin.php"><span class="iconmenu icon-user-tie"></span> Usuario</a></li>
@@ -86,11 +86,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-6 ser-right-page">
 				<div class="port-2 effect-3">
                 	<div class="image-box w3">
-                    	<img src="images/a1.jpg" alt=" "/>
+                    	<img src="images/1770830.JPEG" alt=" "/>
                     </div>
                     <div class="text-desc">
                     	<h4>Laboratorio Clinico Dolly Roncancio</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p></p>
                     </div>
                 </div>
 			</div>
@@ -100,10 +100,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p><span class="iconabout icon-stats-bars2"></span></p><!-- CSS ICONOS 1515 -->
 					</div>
 					<div class="services-right agileits">
-						<h4>Mision</h4>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h4>MISIÓN</h4>
+						<p>TIENE EL FIN DE BRINDAR SU SERVICIO, EN LA REALIZACION DE LOS EXAMENES DE LABORATORIO CLINICO CON CALIDAD, RESPONSABILIDAD  Y HONESTIDAD.
+								QUE CONTRIBUYA A LA AYUDA DIAGNOSTICA PARA EL MEJORAMIENTO DE LA SALUD DEL PACIENTE.
+								 </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -112,10 +112,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p><span class="iconabout icon-eye"></span></p>
 					</div>
 					<div class="services-right w3-agileits">
-						<h4>Vision</h4>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h4>VISIÓN</h4>
+						<p>SER  EL LABORATORIO DE  PREFERENCIA   DE LOS PACIENTES, PERSONAL MEDICO Y EMPRESAS, PARA SATISFACER LAS NECESIDADES EN EL DIAGNOSTICO CLINICO.
+								EN EL MUNICIPO DE ACACIAS Y CIRCUNVECINOS
+								</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -132,26 +132,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-sm-6 capabil-grid wow fadeInDown animated animated text-center" data-wow-delay="0.4s">
 				<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='27' data-delay='.5' data-increment="1">27</div>
 				<h4>Años activo</h4>	
-				<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium </p>
+				<!-- <p>Sed ut perspiciatis unde omnis iste natus error sit 
+						voluptatem accusantium </p> -->
 			</div>
 			<div class="col-sm-6 capabil-grid wow fadeInDown animated animated text-center" data-wow-delay="0.4s">
 				<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='3' data-delay='.5' data-increment="1">3</div>
 				<h4>Sedes</h4>	
-				<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium</p>
+				<!-- <p>Sed ut perspiciatis unde omnis iste natus error sit 
+						voluptatem accusantium</p> -->
 			</div>
-			<div class="col-sm-6 capabil-grid wow fadeInDown animated animated text-center" data-wow-delay="0.4s">
+			<!-- <div class="col-sm-6 capabil-grid wow fadeInDown animated animated text-center" data-wow-delay="0.4s">
 				<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='24' data-delay='.5' data-increment="1">7</div>
-				<h4>Dias de atencion</h4>	
+				<h4>Dias de atención</h4>	
 				<p>Sed ut perspiciatis unde omnis iste natus error sit 
 						voluptatem accusantium </p>
-			</div>
+			</div> -->
 			<div class="col-sm-6 capabil-grid wow fadeInDown animated animated text-center" data-wow-delay="0.4s">
 				<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='456456' data-delay='.5' data-increment="1">456456</div>
 				<h4>Pacientes</h4>	
-				<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium  </p>
+				<!-- <p>Sed ut perspiciatis unde omnis iste natus error sit 
+						voluptatem accusantium  </p> -->
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -161,7 +161,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"></div>
 	</div>
 </div>
-<div class="team all_pad">
+<!-- <div class="team all_pad">
 	<div class="container">
 		<h3 class="title">Equípo</h3>
 		<div class="team-grids">
@@ -233,7 +233,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"></div>
 		</div>
 	</div>
-</div>
+</div> -->
 <!-- contact -->
 <!-- <div class="contact_w3agile">
 	<div class="container">
