--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,7 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Clinical Lab a Medical Category Flat Bootstrap Responsive Website Template | Contact :: w3layouts</title>
+<title>LABORATORIO CLÍNICO DOLLY RONCANCIO</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,6 +12,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //for-mobile-apps -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+
+
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 <!-- iconos -->
 <link rel="stylesheet" type="text/css" href="iconos/fonts1.css">
@@ -61,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html" class="active"><span class="iconmenu icon-home"></span> Inicio</a></li>
 					<li><a href="about.html"><span class="iconmenu icon-book"></span> Nosotros</a></li>
-					<li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li>
+					<!-- <li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li> -->
 					<li><a href="main_app/resultados.php"><span class="iconmenu icon-download"></span> Descargar Resultados</a></li>
 					<li><a href="contact.html"><span class="iconmenu icon-location2"></span> Contacto</a></li>
 					<li><a href="loogin.php"><span class="iconmenu icon-user-tie"></span> Usuario</a></li>
@@ -79,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //banner -->
 <div class="map all_pad">
 	<div class="container">
-		<h3 class="title agile">Ubicate con el mapa</h3>
+		<h3 class="title agile">Ubícate con el mapa</h3>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995.0413007435263!2d-73.7585060707778!3d3.986414599818797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3e3952ca5bbaa3%3A0xda940aa7d3875491!2sLaboratorio+Clinico+Dolly+Roncancio!5e0!3m2!1ses!2sco!4v1539918155791" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		<div class="contact-grids w3layouts">
 			<h3 class="title">Contactanos<span></span></h3>
@@ -87,21 +85,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="contact-grid1 agileits-w3layouts">
 						<i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>
 						<h4>Direccion</h4>
-						<p>12K Street, 45 Building Road <span>New York City.</span></p>
+						<p>CALLE 14-14-32 ACACIAS META.</p>
 					</div>
 				</div>
 				<div class="col-md-4 contact-grid agileits text-center animated wow slideInUp" data-wow-delay=".5s">
 					<div class="contact-grid2 w3">
 						<i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>
 						<h4>Numeros</h4>
-						<p>+1234 567 890<span>+1234 567 890</span></p>
+						<p>320 4637396</p>
 					</div>
 				</div>
 				<div class="col-md-4 contact-grid w3 text-center animated wow slideInRight" data-wow-delay=".5s">
 					<div class="contact-grid3 w3l">
 						<i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>
 						<h4>Correo de contacto</h4>
-						<p><a href="mailto:info@example.com">info@example1.com</a><span><a href="mailto:info@example.com">info@example2.com</a></span></p>
+						<p><a href="mailto:laboratoriodolly@hotmail.com">laboratoriodolly@hotmail.com</a></p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
@@ -113,22 +111,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<h2 class="title agileits-w3layouts">Contactanos</h2>
 		<div class="strip"></div>
-		<ul>
+		<!-- <ul>
 			<li><a class="fb-icon1" href="#"></a></li>
 			<li><a class="fb-icon2" href="#"></a></li>
 			<li><a class="fb-icon3" href="#"></a></li>
 			<li><a class="fb-icon4" href="#"></a></li>
 			<li><a class="fb-icon5" href="#"></a></li>
-		</ul>
+		</ul> -->
 		<form action="#" method="post">
 			<input type="text" value="Nombre" name="Name" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Name';}">
 			<input type="email" value="Correo" name="Email" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Email';}">
 			<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}" required="">Mensaje</textarea>
 			<div class="con-form text-center">
-				<input type="submit" value="Send">
+				<input type="submit" value="ENVIAR">
 			</div>
 		</form>
-		<p class="agileinfo"> 2018 Dolly Roncancio. All rights reserved | Design by Jose Luis Mora R, Cristian Ovalle</p>
+		<p class="agileinfo"> 2019 Laboratorio Clínico Dolly Roncancio. Todos los derechos reservados</p>
 	</div>
 </div>
 <!-- smooth scrolling -->
