--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
@@ -66,7 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html" class="active"><span class="iconmenu icon-home"></span> Inicio</a></li>
 					<li><a href="about.html"><span class="iconmenu icon-book"></span> Nosotros</a></li>
-					<li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li>
+					<!-- <li><a href="treatments.html"><span class="iconmenu icon-lab"></span> Servicios</a></li> -->
 					<li><a href="main_app/resultados.php"><span class="iconmenu icon-download"></span> Descargar Resultados</a></li>
 					<li><a href="contact.html"><span class="iconmenu icon-location2"></span> Contacto</a></li>
 					<li><a href="loogin.php"><span class="iconmenu icon-user-tie"></span> Usuario</a></li>
@@ -105,23 +99,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="banner-info w3">
 						<div class="banner-text w3l">
 							<h3>LABORATORIO CLINICO<span>DOLLY RONCANCIO</span></h3>
-							<p>conchudo 1 </p>
+							<!-- <p>conchudo 1 </p> -->
 						</div>
 					</div>
 				</li>
 				<li>
 					<div class="banner-info w3ls">
 						<div class="banner-text agileits">
-							<h3>WE ARE FOCUSSED YOU<span>ROUND THE CLOCK</span></h3>
-							<p>conchudo 2</p>
+								<h3>TOMAS DE MUESTRA DE LABORATORIO</h3>
 						</div>
 					</div>
 				</li>
 				<li>
 					<div class="banner-info agileinfo">
 						<div class="banner-text wthree">
-							<h3>HELPING YOU<span>LIVE YOUR HEALTHY LIFE</span></h3>
-							<p>conchudo 3 </p>
+							<h3>UBICADO EN LA <span>CIUDAD DE ACACIAS-META</span></h3>
+						<p>CALLE 14-14-32 </p>
 						</div>
 					</div>
 				</li>
@@ -139,7 +132,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="btm-wid">
 					<div class="thumbs">
 						<span class="rotate">
-							<a href="#"  class="btn"><span class="icon-aid-kit" style=" font-size: 50px;margin-left: 20px;"></span><i class="fa fa-arrow-circle-up"></i></span></a>
+							<a href="#"  class="btn"><span class="icon-aid-kit" style=" font-size: 50px;margin-left: -10px; position: absolute;"></span><i class="fa fa-arrow-circle-up"></i></span></a>
 						</span>
 					</div>
 					<div class="fill_fig">
@@ -155,13 +148,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<div class="col-md-6 bottom-right agileits-w3layouts">
 		<div class="btm-right-grid agile">
-			<h2>Providing Appropriate Health Care For Adult, Seniors and Children</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+			<h2>POLITICA DE CALIDAD</h2>
+			<p>EL LABORATORIO CLINICO DOLLY RONCANCIO Y SUS TOMAS DE MUESTRAS  SE COMPROMETE A ORIENTAR SU GESTION EN LA OBTENCION DE RESULTADOS CONFIABLES,OPORTUNOS  PARA SUS USUARIOS TANTO DE EMPRESAS COMO PARTICULARES, CONTANDO CON UN EQUIPO HUMANO Y TECNOLOGICO  CUMPLIENDO CON LOS  REQUISITOS  EXIGIDOS.
+					</p>
+				 
 		</div>	
 	</div>
 	<div class="clearfix"></div>
@@ -170,28 +160,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- services -->
 <div class="services_agile">
 	<div class="container">
-		<h3 class="title">Nuestros servicios</h3>
+		<h3 class="title">NUESTROS SERVICIOS</h3>
 		<div class="services_right w3-agile">
+			<div class="col-md-2"></div>
 			<div class="col-md-4 list-left text-center wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.1s">
-				<span><img src="images/icon1.png" alt=" "/></span>
-				<h4>Voluptatem</h4>
+				<span><img src="images/icon2.png" alt=" "/></span>
+				<h4>Exámenes de Primer Nivel </h4>
 				<div class="multi-gd-text"><a href="#"><img class="img-responsive" src="images/p5.jpg" alt=" "/></a></div>
-				<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-					sed quia consequuntur magni dolores eos qui</p>
+				<p>Proceso de exámenes de laboratorio clínico de primer nivel.</p>
 			</div>
 			<div class="col-md-4 list-left text-center wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.2s">
 				<span><img src="images/icon2.png" alt=" "/></span>
-				<h4>Voluptatem</h4>
+				<h4>Exámenes de Segundo y Tercer nivel</h4>
 				<div class="multi-gd-text"><a href="#"><img class="img-responsive" src="images/p6.jpg" alt=" "/></a></div>
-				<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-					sed quia consequuntur magni dolores eos qui</p>
-			</div>
-			<div class="col-md-4 list-left text-center wow bounceInDown" data-wow-duration="1.5s" data-wow-delay="0.3s">
-				<span><img src="images/icon3.png" alt=" "/></span>
-				<h4>Voluptatem</h4>
-				<div class="multi-gd-text"><a href="#"><img class="img-responsive" src="images/p7.jpg" alt=" "/></a></div>
-				<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-					sed quia consequuntur magni dolores eos qui</p>
+				<p>Toma de muestra de 2 y 3 nivel para ser remitidas a laboratorio de referencias</p>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -203,34 +185,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="care_agileits">
 	<div class="container">
 		<div class="offer agile">
-			<h3>Offering the full spectrum of new treatments</h3>
-			<h4>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</h4>
+			<h3>HORARIO DE ATENCIÓN</h3>
+			<!-- <h4>LUNES A VIERNES</h4> -->
 			<ul>
 				<li>
 					<div class="offer-left w3-agile">
 						<div class="hi-icon-wrap hi-icon-effect-2 hi-icon-effect-2b">
-							<a href="#" class="hi-icon hi-icon-cog glyphicon glyphicon-education"></a>
+							<a href="#" class="hi-icon hi-icon-cog glyphicon glyphicon-time"></a>
 						</div>
 					</div>
 					<div class="offer-right agileits-w3layouts">
-						<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-						aut odit aut fugit, sed quia consequuntur magni dolores eos qui</p>
+						<p>LUNES A VIERNES</p>
+						<p>7 AM A 12PM - 2PM A 5PM</p>
 					</div>
 					<div class="clearfix"></div>
 				</li>
 				<li>
 					<div class="offer-left w3-agileits">
 						<div class="hi-icon-wrap hi-icon-effect-2 hi-icon-effect-2b">
-							<a href="#" class="hi-icon hi-icon-cog glyphicon glyphicon-scissors"></a>
+							<a href="#" class="hi-icon hi-icon-cog glyphicon glyphicon-time"></a>
 						</div>
 					</div>
 					<div class="offer-right wthree">
-						<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-						aut odit aut fugit, sed quia consequuntur magni dolores eos qui</p>
+						<p>SÁBADOS</p>
+						<p>7AM - 12PM</p>
 					</div>
 					<div class="clearfix"></div>
 				</li>
-				<li>
+				<!-- <li>
 					<div class="offer-left agileinfo">
 						<div class="hi-icon-wrap hi-icon-effect-2 hi-icon-effect-2b">
 							<a href="#" class="hi-icon hi-icon-cog glyphicon glyphicon-plus"></a>
@@ -241,12 +223,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						aut odit aut fugit, sed quia consequuntur magni dolores eos qui</p>
 					</div>
 					<div class="clearfix"></div>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</div>
 </div>
-<!-- //care -->
+<!-- //care
 <div class="features_w3 agileits">
 	<div class="container">
 		<h3 class="title">Our Features</h3>
@@ -338,7 +320,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"></div>
 		</div>
 	</div>
-</div>
+</div> -->
 <!-- <div class="contact_w3agile">
 	<div class="container">
 		<h2 class="title w3">Contactanos</h2>
